--- a/localisation/russian/MD_internal_factions_l_russian.yml
+++ b/localisation/russian/MD_internal_factions_l_russian.yml
@@ -229,7 +229,7 @@
  neutral_lbu_tt: "§Y[?THIS.labour_unions_opinion|2]§!"
  display_labour_unions_opinion: "Мнение §Y$labour_unions$§! изменится на [?temp_opinion|+0] (Текущее: [LBU_opinion_display])\n"
  CHI_landowners: "Политическая элита"
- HKG_landowners: "Застройщик недвижимости"
+ HKG_landowners: "Хынг Йи Кук"
  KUW_landowners: "Племенные вожди"
  BHR_landowners: "Племенные вожди"
  OMA_landowners: "Племенные вожди"
@@ -639,7 +639,6 @@
  the_military_add_30_tt: "Мнение §Yвоенных§! §G+30§!\n"
  the_military_add_35_tt: "Мнение §Yвоенных§! §G+35§!\n"
  the_military_add_40_tt: "Мнение §Yвоенных§! §G+40§!\n"
- HKG_farmers: "Хынг Йи Кук"
  the_ulema_minus_5_tt: "Мнение §Y$the_ulema$§! §R-5§!\n"
  the_clergy_minus_5_tt: "Мнение §Y$the_clergy$§! §R-5§!\n"
  wahabi_ulema_minus_5_tt: "Мнение §Y$wahabi_ulema$§! §R-5§!\n"
