--- a/localisation/simp_chinese/MD_money_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_money_l_simp_chinese.yml
@@ -16,7 +16,7 @@
  F_TREASURY_TOOLTIP: "§Y[THIS.GetName]§!GDP总量：$§O[?gdp_total|0]§!B\n§Y[THIS.GetName]§!人均GDP：$§O[?gdp_per_capita]§!K\n---------\n他们有$[?treasury]§HB§!现金余额\n他们每周收支是$[?treasury_rate|+]§HB§!"
  F_INT_INVESTMENTS_TOOLTIP: "他们目前有$[?int_investments]§HB§!用于国际投资。\n他们每周获得$[?int_investments_rate]§HB§!的§H投资收入§!并收归国库。"
  F_EXPENSE_GAIN_TOOLTIP: "他们目前每周开销为$[?display_expense]§HB§!。"
- F_EXPENSE_GAIN_TOOLTIP_DELAYED: "§C官僚§!：$§R[?bureaucracy_gain|-3]§!\n§O国防§!：$§R[?defence_gain|-3]§!\n§0治安§!：$§R[?security_gain|-3]§!\n§J教育§!：$§R[?education_gain|-3]§!\n§P医保§!：$§R[?health_gain|-3]§!\n§B福利§!：$§R[?welfare_gain|-3]§!\n§R债务利率：§! $§R[?debt_rate|-3]§!\n§7移民控制§!: $$[?border_control_gain|-3]\n§H额外费用：§! $§R[?additional_expenses_rate|-3]§!\n\n总支出：$§R[?display_expense]§!"
+ F_EXPENSE_GAIN_TOOLTIP_DELAYED: "§C官僚§!：$§R[?bureaucracy_gain|-3]§!\n§O国防§!：$§R[?defence_gain|-3]§!\n§0治安§!：$§R[?security_gain|-3]§!\n§4教育§!：$§R[?education_gain|-3]§!\n§P医保§!：$§R[?health_gain|-3]§!\n§B福利§!：$§R[?welfare_gain|-3]§!\n§R债务利率：§! $§R[?debt_rate|-3]§!\n§7移民控制§!: $$[?border_control_gain|-3]\n§H额外费用：§! $§R[?additional_expenses_rate|-3]§!\n\n总支出：$§R[?display_expense]§!"
  F_TAX_RATE_TOOLTIP: "他们目前§H税率§!为[?tax_rate]%\n\n§Y企业税率：§![?corporate_tax_rate]%\n§Y人口税率：§![?population_tax_rate]%\n"
  F_TAX_GAIN_TOOLTIP: "他们每周获得$[?display_income]§HB§!收入。"
  F_TAX_GAIN_TOOLTIP_DELAYED: "§Y[THIS.GetName]§!GDP：$§O[?THIS.gdp_total|0]§!B\n§Y[THIS.GetName]§!GDP/C： $§O[?THIS.gdp_per_capita]§!K\n\n最新§Y季度GDP增长率§!：[?last_quarter_gdp_growth_rate|%Y]\n---------\n§C人口收入：§! $§G[?population_tax|+3]§!\n§L企业税收：§! $§G[?corporate_tax|+3]§!\n§G国际投资：§! $§G[?int_investments_rate|+3]§!\n§0资源出口：§! §G[?resource_sale_rate|+3]§!\n§H额外收入：§! $§G[?additional_income_rate|+3]§!\n\n总计收入： $§G[?display_income]§!"
@@ -72,7 +72,7 @@
  POLICE_RATE: "$$§R[?security_gain|-3]§!"
  POLICE_SPENDING_TOOLTIP: "内部安全支出"
  POLICE_SPENDING_TOOLTIP_DELAYED: "内部安全开支是指我们将多少钱用于我们的国家内部安全，如警察，以及以情报机构或国家安全机关形式存在的安全部门。内部安全支出的基本费用是基于国家的总人口，每一级的§Y内部安全法案§!都会增加费用。\n\n人均GDP对§Y内部安全开支§!的影响：[?education_cost_gdp_multiplier_display|-%0]\n法案，国家精神和科技对§Y内部安全支出§!的影响：[?police_cost_multiplier_display|-%0]"
- EDUCATION_EXPENSE: "§J教育：§!"
+ EDUCATION_EXPENSE: "§4教育：§!"
  EDUCATION_RATE: "$$§R[?education_gain|-3]§!"
  EDUCATION_EXPENSE_TOOLTIP: "教育支出"
  EDUCATION_EXPENSE_TOOLTIP_DELAYED: "教育支出是指我们用于资助公立和私立学校、研究和教育的资金。教育的基本成本基于国家总人口于各级§Y教育支出§!增加的成本。\n\n人均GDP对§Y教育支出§!的影响：[?education_cost_gdp_multiplier_display|-%0]\n法案，国家精神和科技对§Y教育支出§!的影响：[?education_cost_multiplier_display|-%0]\n科研槽数量对§Y教育支出§!的影响：[?research_slot_modifier|-%0]"
@@ -626,7 +626,7 @@
  market_sold_income_tt: "\n$$§G[?market_sold_value_track]§!来自§Y市场合同§!\n"
  open_contract_money_screen: "打开合同花费菜单"
  open_contract_money_screen_desc: "打开国际市场的资金花费菜单。"
- EMPLOYMENT_AVERAGE: "§J平均劳动力填充度：§! "
+ EMPLOYMENT_AVERAGE: "§P平均劳动力填充度：§! "
  EMPLOYMENT_AVERAGE_TT: "劳动力填充度"
  EMPLOYMENT_AVERAGE_TT_DELAYED: "§Y劳动力填充度§! 是代表您的国家有多少工人参与工作与我们的建筑物所需的工人数量相比的值。\n\n§Y平均劳动力填充度：§! [?ROOT.average_worker_fulfillment|%0]\n\n§Y不同建筑的劳动力填充度：§!\n民用工厂：§Y[?ROOT.civilian_factories_manpower_fulfillment|%]§!\n军用工厂：§Y[?ROOT.military_factories_manpower_fulfillment|%]§!\n海军船坞：§Y[?ROOT.naval_factories_manpower_fulfillment|%]§!\n办公园地：§Y[?ROOT.offices_manpower_fulfillment|%]§!\n商业性农业区：§Y[?ROOT.agriculture_district_manpower_fulfillment|%]§!\n"
  alaa_income_tt: "$$[?additional_income_mubarak|+3]来自§Y$EGY_mubarak_money$§!\n"
