--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -869,45 +869,38 @@
 
 
  MLW_LW_conflict_status_TITLE_TEXT: "Conflict Resolution Status"
+ MLW_LW_conflict_data_TITLE_TEXT: "[?var:MLW_LW_state_selected.GetName]"
 
  MLW_LW_diplomacy_status_TITLE_TEXT: "§WDiplomatic Resolution Progress:§!"
- MLW_LW_diplomacy_status_DESC_TEXT: "This is just an example to show off my progress, but here will be a short description for flavour of the state selected, depending on how well the §Cdiplomatic§! resolutions are going."
 
-
-
-
-
-
-
+ MLW_LW_diplomatic_approach_level_1: ""
+ MLW_LW_diplomatic_approach_level_2: ""
+ MLW_LW_diplomatic_approach_level_3: ""
+ MLW_LW_diplomatic_approach_level_4: ""
+ MLW_LW_diplomatic_approach_level_5: ""
+ MLW_LW_diplomatic_approach_level_6: ""
+ MLW_LW_diplomatic_approach_level_7: ""
+ MLW_LW_diplomatic_approach_level_8: ""
+ MLW_LW_diplomatic_approach_level_9: ""
+ MLW_LW_diplomatic_approach_level_10: "Complete diplomatic relations have been achieved, allowing §Y[MLW.GetNameWithFlag]§! to officially §Yannex§! the state of §Y[?var:MLW_LW_state_selected.GetName]§! from its current owner."
 
  MLW_LW_military_status_TITLE_TEXT: "§WMilitaristic Resolution Progress:§!"
- MLW_LW_military_status_DESC_TEXT: "This is just an example to show off my progress, but here will be a short description for flavour of the state selected, depending on how well the §Rmilitaristic§! resolutions are going."
+
+ MLW_LW_militarist_approach_level_1: ""
+ MLW_LW_militarist_approach_level_2: ""
+ MLW_LW_militarist_approach_level_3: ""
+ MLW_LW_militarist_approach_level_4: ""
+ MLW_LW_militarist_approach_level_5: ""
+ MLW_LW_militarist_approach_level_6: ""
+ MLW_LW_militarist_approach_level_7: ""
+ MLW_LW_militarist_approach_level_8: ""
+ MLW_LW_militarist_approach_level_9: ""
+ MLW_LW_militarist_approach_level_10: ""
+
+ MLW_LW_select_state_button_TEXT: "[THIS.GetName]"
+ MLW_LW_select_state_effect_TT: "test"
 
 
-
-
-
-
-
-
-
-
-
- MLW_LW_select_njombe_button_TEXT: "[1046.GetName]"
- MLW_LW_select_njombe_button_TT: ""
- MLW_LW_select_njombe_button_TT_delayed: ""
-
- MLW_LW_select_mbeya_button_TEXT: "[1045.GetName]"
- MLW_LW_select_mbeya_button_TT: ""
- MLW_LW_select_mbeya_button_TT_delayed: ""
-
- MLW_LW_select_west_niassa_button_TEXT: "[1049.GetName]"
- MLW_LW_select_west_niassa_button_TT: ""
- MLW_LW_select_west_niassa_button_TT_delayed: ""
-
- MLW_LW_select_west_ruvuma_button_TEXT: "[1047.GetName]"
- MLW_LW_select_west_ruvuma_button_TT: ""
- MLW_LW_select_west_ruvuma_button_TT_delayed: ""
 
  # SADC FOPOL
 
