--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -754,7 +754,7 @@
  SER_market_corporatism_desc: "The free market is our preferred option, but the mechanisms of operation are of that market are flawed. It is necessary to create a system that requires government intervention in the market economy, supporting the most successful large enterprises and ensuring a dialog between these enterprises and their employees. It is also important to create conditions that will help medium and small businesses to actively develop and expand."
  SER_anti_communist_stance: "Ant-Communist Stance"
  SER_anti_communist_stance_desc: "Communism is the worst thing that happened to the Serbian people. Even though we were able to overthrow this communist yoke, the ideas of the past regime and its supporters are still popular. It is necessary to conduct a large-scale campaign to cleanse people's minds of this filth, and the main agitators should be checked for committing war crimes!"
- SER_anticorruption_action: "Anti-Corruption Campain"
+ SER_anticorruption_action: "Anti-Corruption Campaign"
  SER_anticorruption_action_desc: "The Milosevic regime left us a huge amount of corruption. It is literally in every organ of power in our country. It is necessary to launch a program to eradicate corruption and clean up the corrupt elements!"
  SER_burrecarcy_destroy: "Crusade Against Bureaucracy!"
  SER_burrecarcy_destroy_desc: "Bureaucracy is the Achtles heel of our system. A bloated state apparatus hits our budget hard and also causes corruption. We will audit the activities of each body and remove unnecessary and inefficient departments, thereby balancing the budget."
