--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -752,7 +752,7 @@
  SER_diplomatic_pragmatism_desc: "We are in a position where we are surrounded by countries that are either direct allies of the west or claiming that status. In order to maintain stability in the region and prevent the loss of our sovereignty, we must play by the rules of the West, but at the same time, we must not forget the other vectors of our policy."
  SER_market_corporatism: "Market Corporatism"
  SER_market_corporatism_desc: "The free market is our preferred option, but the mechanisms of operation are of that market are flawed. It is necessary to create a system that requires government intervention in the market economy, supporting the most successful large enterprises and ensuring a dialog between these enterprises and their employees. It is also important to create conditions that will help medium and small businesses to actively develop and expand."
- SER_anti_communist_stance: "Ant-Communist Stance"
+ SER_anti_communist_stance: "Anti-Communist Stance"
  SER_anti_communist_stance_desc: "Communism is the worst thing that happened to the Serbian people. Even though we were able to overthrow this communist yoke, the ideas of the past regime and its supporters are still popular. It is necessary to conduct a large-scale campaign to cleanse people's minds of this filth, and the main agitators should be checked for committing war crimes!"
  SER_anticorruption_action: "Anti-Corruption Campaign"
  SER_anticorruption_action_desc: "The Milosevic regime left us a huge amount of corruption. It is literally in every organ of power in our country. It is necessary to launch a program to eradicate corruption and clean up the corrupt elements!"
