--- a/localisation/english/MD_tooltips_l_english.yml
+++ b/localisation/english/MD_tooltips_l_english.yml
@@ -530,7 +530,7 @@
  CHI_yalongjiang_dam_TT: "§YA hydroelectricity project in Sichuan will give us additional energy:§! §G12.5§!"
  CHI_wujiang_dam_TT: "§YA hydroelectricity project in Guizhou will give us additional energy:§! §G2.5§!"
  CHI_jialingjiang_dam_TT: "§YA hydroelectricity project in Chongqing will give us additional energy:§! §G5§!"
- CHI_build_high_speed_railway_TT: "§YUnlocks §YHigh-speed railway construction project§! decision\n§!"
+ CHI_build_high_speed_railway_TT: "§YUnlocks §YHigh-speed railway construction project§! decision§!"
  CHI_build_high_speed_railway_northern_TT: "§YAll state in northern China would gain high speed railway bonus.§!"
  CHI_build_high_speed_railway_central_TT: "§YAll state in central China would gain high speed railway bonus.§!"
  CHI_build_high_speed_railway_eastern_TT: "§YAll state in eastern China would gain high speed railway bonus.§!"
