--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -1476,7 +1476,7 @@
  MNT_montenegro_air_desc: "In order to keep our airspace safe, we must create air forces and equip them with all the necessary equipment they need."
  MNT_save_yug_air: "Save Yugoslavian Aircrafts"
  MNT_save_yug_air_desc: "We inherited lots of Yugoslavian air fighters from the old airfields. Blow off the dust, and they are ready for exploitation."
- MNT_mlrs: "Ant-Air Defence"
+ MNT_mlrs: "Anti-Air Defence"
  MNT_mlrs_desc: "We couldn't be sure that our enemies were untouchable if there weren't any air defense systems. Restoring old Yugoslavian anti-air defense systems and buying the new ones will secure our airspace."
  MNT_foreign_helis: "Buy Foreign Helicopters"
  MNT_foreign_helis_desc: "To relocate our troops in hard climates and tough geopolitical conditions, we must acquire new helicopters."
