--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -1490,10 +1490,10 @@ DEN_Maersk1_desc: "Established in 1904 by A.P. Møller and Captain Peter Mærsk 
  DEN_Bad_Bank_EZB_decision_desc: "Denmark launches a bold economic stimulus plan, committing significant resources to decrease national debt and boost international investments. By injecting capital into strategic sectors and infrastructure projects, Denmark aims to revitalize the economy, create jobs, and attract foreign investors, positioning itself as a dynamic hub for innovation and growth in the global market."
  DEN_visitdenmark_category: "VisitDenmark"
  DEN_visitdenmark_category_desc: "The establishment of VisitDenmark represents a concerted effort by the Danish government to promote tourism and showcase the country's rich cultural heritage, natural beauty, and vibrant urban life to the world."
- DEN_TV_campain: "Launch a TV campaign"
- DEN_Print_campain: "Launch a printmedia campaign"
- DEN_socialmedia_campain: "Launch a socialmedia campaign"
- DEN_controversal_campain: "Launch a controversial campaign"
+ DEN_TV_campaign: "Launch a TV campaign"
+ DEN_Print_campaign: "Launch a printmedia campaign"
+ DEN_socialmedia_campaign: "Launch a socialmedia campaign"
+ DEN_controversal_campaign: "Launch a controversial campaign"
 
 
  ##Tooltips
@@ -1504,10 +1504,10 @@ DEN_Maersk1_desc: "Established in 1904 by A.P. Møller and Captain Peter Mærsk 
  DEN_euro_decision: "Unlocks §HThe EURO Question§! decisions"
  DEN_Euro_referendum_TT: "now its up to the Voters."
  DEN_Freetown_Christiana_tt: "§HSjaelland§! Receives §H40 Productivity§!"
- DEN_controversal_campain_tt: "a controversal campain could be a great succes but could also fail total, but no nisk, no fun"
- DEN_socialmedia_campain_tt: "a socialmedia campain reach a lot of people, so the risks are low and the chances of succes are really good"
- DEN_Print_campain_tt: "a Printmedia campain coukld be launched, the risk are low, but also the rewards"
- DEN_TV_campain_tt: "a TV campain could reach a lot of people, but is nothing special anymore"
+ DEN_controversal_campaign_tt: "a controversal campain could be a great succes but could also fail total, but no nisk, no fun"
+ DEN_socialmedia_campaign_tt: "a socialmedia campain reach a lot of people, so the risks are low and the chances of succes are really good"
+ DEN_Print_campaign_tt: "a Printmedia campain coukld be launched, the risk are low, but also the rewards"
+ DEN_TV_campaign_tt: "a TV campain could reach a lot of people, but is nothing special anymore"
 
  #Military
  DEN_military_cost2_tt: "Modifies §YMilitary Cost§! for §HForsvaret§! by [?DEN_military_cost2_change|-%] (Current: [?DEN_military_cost2|Y%])"
