--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -1504,10 +1504,10 @@ DEN_Maersk1_desc: "Established in 1904 by A.P. Møller and Captain Peter Mærsk 
  DEN_euro_decision: "Unlocks §HThe EURO Question§! decisions"
  DEN_Euro_referendum_TT: "now its up to the Voters."
  DEN_Freetown_Christiana_tt: "§HSjaelland§! Receives §H40 Productivity§!"
- DEN_controversal_campaign_tt: "a controversal campain could be a great succes but could also fail total, but no nisk, no fun"
- DEN_socialmedia_campaign_tt: "a socialmedia campain reach a lot of people, so the risks are low and the chances of succes are really good"
- DEN_Print_campaign_tt: "a Printmedia campain coukld be launched, the risk are low, but also the rewards"
- DEN_TV_campaign_tt: "a TV campain could reach a lot of people, but is nothing special anymore"
+ DEN_controversal_campaign_tt: "A controversial campaign would be a great success but could also fail total, but no risk, no fun"
+ DEN_socialmedia_campaign_tt: "A social media campaign reach a lot of people, so the risks are low and the chances of success are really good"
+ DEN_Print_campaign_tt: "A Print Media campaign would be launched, the risk are low, but also the rewards"
+ DEN_TV_campaign_tt: "A TV campaign could reach a lot of people, but is nothing special anymore"
 
  #Military
  DEN_military_cost2_tt: "Modifies §YMilitary Cost§! for §HForsvaret§! by [?DEN_military_cost2_change|-%] (Current: [?DEN_military_cost2|Y%])"
