--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -102,7 +102,7 @@
  DEN_the_status_of_the_amts: "The Status of the Amts"
  DEN_the_status_of_the_amts_desc: "Our Amts are an old system of administration that our government has clung to from ancient times. It is important to decide what we will do for the future and whether we will empower our regions or our municipalities."
  DEN_empower_the_regions: "Empower the Regions"
- DEN_empower_the_regions_desc: "The regions compromise many of the small local governments, and we can centralize our government and hopefully make it more effective at handling issues."
+ DEN_empower_the_regions_desc: "The regions compromise many of the small local governments, and we can centralized our government and hopefully make it more effective at handling issues."
  DEN_empower_the_municipalities: "Empower the Municipalities"
  DEN_empower_the_municipalities_desc: "If we empower our local regions, they will be able to more effectively handle the situations that arise within their locality, allowing for a case-by-case government style."
  DEN_the_status_of_ertholmene: "The Status of Ertholmene"
