--- a/localisation/english/agrarian_economy_l_english.yml
+++ b/localisation/english/agrarian_economy_l_english.yml
@@ -10,6 +10,22 @@
  AGRI_extreme_drought_ongoing: "Widespread Drought Ongoing"
  AGRI_extreme_drought_ongoing_desc: "[ROOT.GetName] is currently suffering a nation widespread drought, a result of a lack of water reaching vast swathes of land within the nation, it is almost certain that [ROOT.GetName] will suffer from its grip for a long time, with a high likelihood of [ROOT.GetName]'s neighbours experiencing ripple effects due to it."
 
+ # TOOLTIPS
+ AGRI_sold_rights_prefix_TT: "§Y[THIS.GetName]§! has sold off §YLand§! rights to grow "
+ AGRI_not_sold_rights_prefix_TT: "§Y[THIS.GetName]§! has not sold off §YLand§! rights to grow "
+ AGRI_sold_off_rights_to_land_TOB_TT: "$AGRI_sold_rights_prefix_TT$§YTobacco§!"
+ AGRI_NOT_sold_off_rights_to_land_TOB_TT: "$AGRI_not_sold_rights_prefix_TT$§YTobacco§!"
+ AGRI_sold_off_rights_to_land_TEA_TT: "$AGRI_sold_rights_prefix_TT$§YTea§!"
+ AGRI_NOT_sold_off_rights_to_land_TEA_TT: "$AGRI_not_sold_rights_prefix_TT$§YTea§!"
+ sell_rights_prefix_TT: "§Y[?var:nation_with_land.GetNameWithFlag]§! will allow industries based in §Y[?var:nation_with_industry.GetNameWithFlag]§! to use §YLand§! for "
+ sell_rights_suffix_TT: " for §Y360 days§!"
+ rights_sold_prefix_TT: "Rights for §YLand§! to grow "
+ rights_sold_suffix_TT: " have been §Gsold§! to §Y[?var:nation_with_industry.GetNameWithFlag]§!$sell_rights_suffix_TT$"
+ AGRI_give_tobacco_company_rights_SELLING_TT: "$sell_rights_prefix_TT$§YTobacco§!$sell_rights_suffix_TT$\n"
+ AGRI_give_tea_company_rights_SELLING_TT: "$sell_rights_prefix_TT$§YTea§!$sell_rights_suffix_TT$\n"
+ AGRI_give_tobacco_company_rights_SOLD_TT: "\n$rights_sold_prefix_TT$§YTobacco§!$rights_sold_suffix_TT$ ([?AGRI_sold_rights_TOB:days_left|Y0] days remaining on contract)"
+ AGRI_give_tea_company_rights_SOLD_TT: "\n$rights_sold_prefix_TT$§YTea§!$rights_sold_suffix_TT$ ([?AGRI_sold_rights_TEA:days_left|Y0] days remaining on contract)"
+
  # ADDITIONAL INCOME TOOLTIP
  agrarian_economy_additional_income_TT: "$$[?additional_income_agrarian_economy|+3] from §Y$agrarian_economy$§!\n"
 
