--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -8605,7 +8605,7 @@
 
  PER_Strike_fighter1: "CF-7S"
  PER_Strike_fighter1_short: "CF-7S"
- #SOV_Strike_fighter1: "Su-22 Fitter"
+ #SOV_Strike_fighter1: "Su-22 Fitter-F"
  PER_Strike_fighter2: "Su-24 Fencer"
  PER_Strike_fighter2_short: "Su-24 Fencer"
  #SOV_Strike_fighter2_variant: "MiG-27 Flogger"
@@ -8952,7 +8952,7 @@
 
  NKO_Strike_fighter1: "Su-17 Fitter"
  NKO_Strike_fighter1_short: "Su-17 Fitter"
- #SOV_Strike_fighter1: "Su-22 Fitter"
+ #SOV_Strike_fighter1: "Su-22 Fitter-F"
  NKO_Strike_fighter2: "Su-24 Fencer"
  NKO_Strike_fighter2_short: "Su-24 Fencer"
  #SOV_Strike_fighter2_variant: "MiG-27 Flogger"
@@ -9040,8 +9040,8 @@
  SYR_MR_Fighter2: "MiG-29 Fulcrum"
  SYR_MR_Fighter2_short: "MiG-29 Fulcrum"
 
- SYR_Strike_fighter1: "Su-22 Fitter"
- SYR_Strike_fighter1_short: "Su-22 Fitter"
+ SYR_Strike_fighter1: "Su-22 Fitter-F"
+ SYR_Strike_fighter1_short: "Su-22 Fitter-F"
  SYR_Strike_fighter2: "Su-24 Fencer"
  SYR_Strike_fighter2_short: "Su-24 Fencer"
 
