Party Name Changes
Added & Changed some party names

--- a/localisation/english/MD_focus_IRE_l_english.yml
+++ b/localisation/english/MD_focus_IRE_l_english.yml
@@ -337,7 +337,7 @@ l_english:
  IRE_DemandAReferendum_tt: "Unlocks decision §YDemand a Referendum§!"
 
 # Ideas
- IRE_idea_celtic_tiger1: "'§9The Celtic Tiger§!'"
+ IRE_idea_celtic_tiger1: "'The Celtic Tiger'"
  IRE_idea_celtic_tiger1_desc: "Ireland's 1990s and 2000s economic boom is generally referred to as "The Celtic Tiger". The Celtic Tiger term is an analogy to the name "East Asian Tigers" that was applied to Singapore, South Korea, Taiwan, and Hong Kong during their period of rapid economic growth between the 1980s and 1990s."
  IRE_idea_celtic_tiger2: "'§9The Celtic Tiger§!'"
  IRE_idea_celtic_tiger2_desc: "Ireland's 1990s and 2000s economic boom is generally referred to as "The Celtic Tiger". The Celtic Tiger term is an analogy to the name "East Asian Tigers" that was applied to Singapore, South Korea, Taiwan, and Hong Kong during their period of rapid economic growth between the 1980s and 1990s."
@@ -365,7 +365,7 @@ l_english:
  IRE_idea_revived_IRA_desc: "Our nation is beginning to return to it's old ways of radical republicanism and what better way to do it than bring back old friends.."
  IRE_idea_stable_housing_market: "Stable Housing Market"
  IRE_idea_irish_republican_army_scars: "Scars Of The IRA"
- IRE_idea_irish_republican_army_scars_desc: "The Irish Republican Army fought for Irish independence since 1919 up until the 1998 following the signing of the 'Good Friday Agreement'.\nThough the days of the Irish Republican Army presence are now at an end, the scars and wounds still hurt the nation.\nOur nation will bear the burden of what the IRA did to the Irish and British people for many years to come, it will not be an easy road.."
+ IRE_idea_irish_republican_army_scars_desc: "The Irish Republican Army fought for Irish independence since 1919 up until 1998 following the signing of the 'Good Friday Agreement'.\nThough the days of the Irish Republican Army presence are now at an end, the scars and wounds still hurt the nation.\nOur nation will bear the burden of what the IRA did to the Irish and British people for many years to come, it will not be an easy road.."
 
  #Tooltips
  IRE_small_housing_tt: "Adds §G300§! to §YHousing Supply§!."
