--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -6193,17 +6193,19 @@
  HON.oligarchism_desc: ""
 
  # Ireland
+ IRE.anarchist_communism: "Irish Republican Socialist Party"
+ IRE.anarchist_communism_desc: ""
  IRE.conservatism: "£IRE_western_conservative Fianna Fail"
  IRE.conservatism_desc: ""
  IRE.liberalism: "£IRE_liberalism Fine Gael"
  IRE.liberalism_desc: ""
- IRE.neutral_Social: "£IRE_neutral_social Sinn Fein"
+ IRE.neutral_Social: "£IRE_neutral_social Sinn Fein Moderate"
  IRE.neutral_Social_desc: ""
  IRE.socialism: "£IRE_western_social_democrat Labour Party"
  IRE.socialism_desc: ""
- IRE.Communist-State: "£IRE_emerging_communism_2015 People before Profit"
+ IRE.Communist-State: "£IRE_emerging_communism Irish National Liberation Army"
  IRE.Communist-State_desc: ""
- IRE.Neutral_Communism: "Social Democrats"
+ IRE.Neutral_Communism: "£IRE_neutral_social Sinn Fein Hardline"
  IRE.Neutral_Communism_desc: ""
  IRE.Neutral_green: "£IRE_neutral_green Green Party"
  IRE.Neutral_green_desc: ""
