Added Internal Investments System & Minor Fixes

--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -573,7 +573,7 @@
  UNS_create_union_state: "§OFinal Stage of Integration§!"
  UNS_create_union_state_desc: "We have prepared our legislative, social, technical and social basis for joining the Union State"
  BLR_path_to_president_uns: "Path to Presidency of the Union State"
- BLR_path_to_president_uns_desc: "We should take into account the mistakes of the last century, when Lukashenka could not become President of the Union State because of the fear of Moscow. This time we will prepare and recruit more supporters of this integration"
+ BLR_path_to_president_uns_desc: "We should take into account the mistakes of the last century, when Lukashenko could not become President of the Union State because of the fear of Moscow. This time we will prepare and recruit more supporters of this integration"
  BLR_verbovka_in_fsb: "Recruitment in FSB"
  BLR_verbovka_in_fsb_desc: "Through our KGB, we will try to recruit supporters of the future unification of Russia and Belarus"
  BLR_verbovka_in_gosduma: "Recruitment in State Duma"
@@ -901,7 +901,7 @@
  BLR_kalinovsky_regiment_desc: "Kastus Kalinovsky Regiment is a volunteer regiment formed to protect the territorial integrity of Ukraine, in particular the city of Kyiv, from Russian invasion."
  BLR_true_political_and_national_freedom: "True Political Freedom"
  BLR_true_political_and_national_freedom_desc: "Beginning of true political freedom is to recover from the devastation that occurred during our purge within the country. It is time to move forward and attain what our people truly desire."
-  
+
  BLR_Taler_ruble: "Belarusian Taler"
  BLR_Taler_ruble_desc: "We must get rid of the ruble completely, replacing it with our new currency."
  BLR_National_science: "Scientific And Economic Growth"
@@ -927,11 +927,11 @@
  BLR_territorial_reform: "Territorial Reform"
  BLR_territorial_reform_desc: "Instead of today's six regions and 110 districts, Zenon Poznyak and the team of authors of the program propose to divide the country into 16 voivodeships, plus Minsk separately. Voivodeships, in turn, will be divided into 60 provinces and 270 old towns."
  BLR_anti_lgbt: "Prohibition of Propaganda of Perverse Relations"
- BLR_anti_lgbt_desc: "We are adopting a law on the priority and protection of the family, marriage (union of a man and a woman), motherhood, on the protection of the family from encroachments and interference in family affairs by ideology and organizations. In addition, it is proposed to adopt a law "on the protection of human nature" and prohibit the propaganda of perverse relations against the natural nature of man."
+ BLR_anti_lgbt_desc: "We are adopting a law on the priority and protection of the family, marriage (union of a man and a woman), motherhood, on the protection of the family from encroachments and interference in family affairs by ideology and organizations. In addition, it is proposed to adopt a law \"on the protection of human nature\" and prohibit the propaganda of perverse relations against the natural nature of man."
  BLR_latgale_or_war: "Latgale or War"
  BLR_latgale_or_war_desc: "Latgale was once part of the Grand Duchy of Lithuania. The time has come to return these lands to its composition, it is unlikely that Latvia will be able to resist us"
  BLR_legacy_kurland: "Legacy of Duchy of Courland"
- BLR_legacy_kurland_desc: "Once these lands were owned by the Duchy of Courland, and we, as its heirs, have the right to its territories, even those that it was forced to sell"
+ BLR_legacy_kurland_desc: "The Duchy of Courland once reached its hand in the race of colonization. The flag of the Duchy once flew over Trindad & Tobago and off of the coast of Gambia. It is time, we the rightful successors of the Duchy, seek their return to our empire. It is time to set our goals overseas and bring these former colonial holdings back to the fold."
  BLR_pro_poland_propoganda: "Pro-belarusian Propaganda in Poland"
  BLR_pro_poland_propoganda_desc: "We must increase our influence in Poland through propaganda and other sources of interaction"
  BLR_Dismiss_soviet_officers: "Dismiss Pro-soviet Officers"
@@ -1040,7 +1040,7 @@
  BLR_white_legion_recruit_revansh: "Recruit Members of the "Praviy Revansh" organization"
  BLR_white_legions_TT: "Number of recruits will change by §Y[?modify_white_legion]§!\n"
  BLR_whitelegion_recruit_2000: "Number of available recruits is 2000"
- 
+
 
  BLR_lith_revol_category: "Lithiania Revolution"
  BLR_Establish_cooperation_lit: "Establish Cooperation With Lithuanian Communists"
@@ -1228,7 +1228,7 @@
  SOV_added_140z: "§YIntegration§! Of §Y[BLR.GetFlag]Belarusian§! 140 Avia Plant"
  SOV_added_140z1: "§YIntegration§! Of §Y[BLR.GetFlag]Belarusian§! 140 Avia Plant"
 
- 
+
  #SERBIA
  BLR_union_migratio_cards: "[union_state_flag_sov_or_ser]§YMigration Card§! of a Single Sample"
  BLR_union_migratio_cards_desc: "A single migration card will make it easier for our citizens to move around the territory of the Union State"
@@ -1679,9 +1679,7 @@
  BLR_the_new_red_army5: "Army of the BSSR"
  BLR_five_year_plans: "Five - Year Plan"
  BLR_agriculture: "Belarusian Agriculture"
- BLR_agriculture_desc: "Thanks to state subsidies and legal legislation, state farms and collective farms, which play an important role in this sector, have been preserved since Lukashenka's time. There are also private farms, but they also play a significant role."
- BLR_agriculture2: "Belarusian Agriculture"
- BLR_agriculture2_desc: "Thanks to state subsidies and legal legislation, state farms and collective farms, which play an important role in this sector, have been preserved since Lukashenka's time. There are also private farms, but they also play a significant role."
+ BLR_agriculture_desc: "Thanks to state subsidies and legal legislation, state farms and collective farms, which play an important role in this sector, have been preserved since Lukashenko's time. There are also private farms, but they also play a significant role."
  BLR_agriculture1: "Private Rural Companies"
  BLR_agriculture1_desc: "Belarusian agricultural sector is now reoriented to private hands."
  BLR_russian_capitalism: "Toward Russian Сapitalism"
@@ -1911,7 +1909,7 @@
  BLR_peleng_create_TT: "§YPeleng decisions§! for the optics and sighting electronics for the military will become available"
  BLR_zavod558_create_TT: "§Y558 Aircraft Factory decisions§! for aircraft repair contracts are now available"
  BLR_chi_coop_mil_TT: "Our factories and enterprises will be able to sell products to §YNorth Korea§!"
- 
+
  #Union State Events
  belarus_union.1.t: "Creation of the Union State"
  belarus_union.1.d: "Finally, our countries are full-fledged brothers. The Union State was created and now nothing will prevent us from fighting together for our future"
@@ -2181,7 +2179,7 @@
  belarus_another.18.b: "No concessions"
 
  belarus_another.19.t: "The Second Lublin Union"
- belarus_another.19.d: "Belarus actively influences our government and has leverage in it. Today, the Belarusian ambassador handed us a draft of a new agreement - implying the creation of a supranational entity, according to the type proposed by Russia for the Lukashenka government. In fact, we are losing some of our autonomy, but our states are becoming almost united. Do we agree to this?"
+ belarus_another.19.d: "Belarus actively influences our government and has leverage in it. Today, the Belarusian ambassador handed us a draft of a new agreement - implying the creation of a supranational entity, according to the type proposed by Russia for the Lukashenko government. In fact, we are losing some of our autonomy, but our states are becoming almost united. Do we agree to this?"
  belarus_another.19.a: "Our country is weakened, I think we should agree"
  belarus_another.19.b: "Our independence is our everything"
 
@@ -2457,7 +2455,7 @@
  belarus_another.6.a: "Our Batka Lukashenko, Belarus mother"
 
  BLR_luka_prime: "Prime Minister of the Union State - Lukashenko"
- 
+
  BLR_power_balance: "Balance of Power"
  default_left_side: "Opposition"
  default_right_side: "Pro-Russian Forces"
