--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -547,6 +547,8 @@
  RULE_OPTION_EU_SIXTY_DESC: "The European Parliament and European Council voting cooldown will be set to sixty days instead of the default one hundred and eighty days."
  RULE_OPTION_EU_NINETY: "90 Days"
  RULE_OPTION_EU_NINETY_DESC: "The European Parliament and European Council voting cooldown will be set to ninety days instead of the default one hundred and eighty days."
+ RULE_OPTION_EU_ONE_HUNDRED_TWENTY: "120 Days"
+ RULE_OPTION_EU_ONE_HUNDRED_TWENTY_DESC: "The European Parliament and European Council voting cooldown will be set to one hundred and twenty days instead of the default one hundred and eighty days."
  RULE_OPTION_EU_ONE_HUNDRED_EIGHTY: "180 Days"
  RULE_OPTION_EU_ONE_HUNDRED_EIGHTY_DESC: "The European Parliament and European Council voting cooldown will be set to the default one hundred and eighty days."
  RULE_OPTION_EU_TWO_HUNDRED_TEN: "210 Days"
