--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -37,6 +37,9 @@
  modifier_production_speed_rocket_site_factor_desc: "Modifies the speed of §Y$rocket_site$§! construction."
  modifier_production_speed_internet_station_factor: "£construction_speed_texticon §Y$internet_station$§! construction speed"
  modifier_production_speed_internet_station_factor_desc: "Modifies the speed of $internet_station$ construction."
+ modifier_production_speed_missile_defense_station_factor: "£construction_speed_texticon §Y$missile_defense_station$§! construction speed"
+ modifier_production_speed_TEL_base_factor: "£construction_speed_texticon §Y$TEL_base$§! construction speed"
+ modifier_production_speed_missile_silo_factor: "£construction_speed_texticon §Y$missile_silo$§! construction speed"
  communism_drift: "£emerging_outlook_campaign_cost_modifier_texticon Daily Emerging Support"
  democratic_drift: "£western_outlook_campaign_cost_modifier_texticon Daily Pro-Western Support"
  fascism_drift: "£salafist_outlook_campaign_cost_modifier_texticon Daily Salafist Support"
@@ -2266,3 +2269,5 @@
  migration_rate_value_factor: "§YNet Migration Rate§! Value Factor"
  popularity_attack_modifier: "£world_tension_wargoal_texticon §HPolitical Popularity Attack§! Modifier"
  popularity_boost_modifier: "£return_on_investment_modifier_texticon §HPolitical Popularity Boost§! Modifier"
+ internal_investments_pp_cost_modifier: "§YInternal Investment§! Political Power Cost Modifier"
+ internal_investments_money_cost_modifier: "§YInternal Investment§! Monetary Cost Modifier"
