--- a/localisation/english/0_energy_l_english.yml
+++ b/localisation/english/0_energy_l_english.yml
@@ -32,9 +32,13 @@
  renewable_capacity_factor_dyn_mod: "Renewable Energy Hotspot"
  renewable_capacity_factor_dyn_mod_TT: "This place has particularly favourable conditions for renewable energy generation, either through stable strong winds or a very high average yearly hours of sunlight. This increases the capacity factor of renewable parks built in this state, so they, on average, operate closer to their maximum capacity."
  heavy_power_restrictions_spirit: "Heavy Power Restrictions"
+ heavy_power_restrictions_spirit_desc: "The government has imposed a series of heavy power restrictions on their population. It drastically has cut back on energy and power consumption but at a cost of tax revenue and other economic penalties."
  some_power_restrictions_spirit: "Moderate Power Restrictions"
+ some_power_restrictions_spirit_desc: "The government has imposed a series of small power restrictions on their population. It drastically has cut back on energy and power consumption but at a cost of tax revenue and other economic penalties."
  some_additional_consumption_spirit: "Moderate Power Consumption Subsidies"
+ some_additional_consumption_spirit_desc: "The government has started a series of small-scale targeted subsidies for people's power usage to relieve some of the financial burden. It has encouraged a little more spending, but electrical consumption has spiked."
  heavy_additional_consumption_spirit: "Heavy Power Consumption Subsidies"
+ heavy_additional_consumption_spirit_desc: "The government has started a series of large-scale targeted subsidies for people's power usage to relieve some of the financial burden. It has encouraged a large amount of additional spending, but electrical consumption has spiked."
 
  # Tooltips
  energy_build_fossil_powerplant_TT: "Changes the number of §YFossil Fuel Powerplants§! by [?temp_change|0+] in [ROOT.GetNameWithFlag] (Current: [?number_of_fossil_pps|Y0])"
