--- a/localisation/english/MD_focus_SPR_l_english.yml
+++ b/localisation/english/MD_focus_SPR_l_english.yml
@@ -853,7 +853,7 @@ l_english:
  SPR_the_foreign_legion: "The Foreign Legion"
  SPR_the_foreign_legion_desc: "Being founded many years ago, it was a feared fighting force. However, today they are primarily aiding in peacekeeping force."
  SPR_expand_the_foreign_legion: "Expand The Foreign Legion"
- SPR_expand_the_foreign_legion_desc: "The world is slowly falling apart, and the foreign legion must be expanded to help keep it all together."
+ SPR_expand_the_foreign_legion_desc: "The world is slowly falling apart, and the foreign legion must be expanded to help keep it all together. We should also explore additional reformation of the legion to expand the standing forces we have available to us. The world must know the might of the Spanish Tercio!"
  SPR_the_regulares: "The Regulares"
  SPR_the_regulares_desc: "The Regulares, formally the \"Fuerzas Regulares Indígenas\", are volunteer infantry units of the Spanish Army primarily recruited from the cities of Ceuta and Melilla. They form the backbone of the Army Corps of Africa and are an important division of our overseas forces."
  SPR_expand_the_regulares: "Expand The Regulares"
@@ -1626,6 +1626,8 @@ l_english:
  SPR_spawn_new_regulares_decision_desc: "Deploying additional Regulares will help bolster our current army."
  SPR_spawn_new_foreign_legion_decision: "Recruit New Foreign Legion Tercios"
  SPR_spawn_new_foreign_legion_decision_desc: "Additional foreign legion units are always welcome."
+ SPR_reform_the_spanish_foreign_legion_decision: "Upgrade the Foreign Legion Tercios"
+ SPR_reform_the_spanish_foreign_legion_decision_desc: "The current §YForeign Legion Tercios§! are performing well. We could aim to improve them with some targeted expansions as well as some additional investments."
  SPR_foreign_recruitment: "Foreign Recruitment"
  SPR_foreign_recruitment_desc: "The number of §YRegulares Brigades§! you can maintain is based on your §YNon-core Population§!, 1 Brigade is allowed per [?SPR_regulare_cap_tt_val|Y0] Million §YNon-core Population§!.\n\nCurrent Regulares capacity:  [?SPR_deployed_regulares|Y0]/[?SPR_regulare_cap|Y0]\n\nThe Number of §YForeign Legion Tercios§! you can maintain is based on your §YTotal Manpower§!, 1 Tercio is allowed per [?SPR_legion_cap_tt_val|Y0] Thousand §YTotal Manpower§!\n\nCurrent Foreign Legion Tercio Capacity: [?SPR_deployed_legions|Y0]/[?SPR_legion_cap|Y0]"
  SPR_political_policy_category: "The Political Policy of Spain"
