--- a/localisation/braz_por/MD_focus_SER_VOJ_MNT_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SER_VOJ_MNT_l_braz_por.yml
@@ -1728,7 +1728,7 @@
  kos_recall_refugees: "Chamada de Refugiados"
  kos_recall_refugees_desc: "Muitas de nossas pessoas são atualmente refugiadas em outros estados. Chamá-las de volta será benéfico para o crescimento de nossa população"
  KOS_security_troubles: "Problemas de Segurança"
- KOS_security_troubles_desc: "Após a desmilitarização da UÇK, nossas forças de segurança estão em frangalhos. Teremos que começar a implementar algumas reformas para tornar nossa nação mais segura"
+ KOS_security_troubles_desc: "Após a desmilitarização do KLA, nossas forças de segurança estão em frangalhos. Precisaremos começar a implementar algumas reformas para tornar nossa nação mais segura"
  KOS_return_of_kla: "Ressurreição da UÇK"
  KOS_return_of_kla_desc: "A UÇK foi desmantelada pelas forças da OTAN. Foi um movimento ruim. Teremos que trazê-los de volta e revitalizá-los para melhorar a segurança de nossas nações"
  KOS_reverse_engineer_leftovers: "Engenharia Reversa"
