--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -400,7 +400,7 @@
  CUB_fight_againts_corruption_desc: "Corruption is a problem for any state, but that does not mean we need to accept it. Any corruption must be uprooted from the source."
  CUB_reduce_burecracy_apparat: "Reforms of the Bureaucratic Apparatus "
  CUB_reduce_burecracy_apparat_desc: "A certificate for this one, a certificate for that one, a statement there, ugh, gross. It's time to start regulating this."
- CUB_demilitarize_minister: "Demilitarization"
+ CUB_demilitarize_minister: "Demilitarisation"
  CUB_demilitarize_minister_desc: "An army is good, but peace is better."
  CUB_guarantee_multi_party_programm: "Guarantee Multi Party System"
  CUB_guarantee_multi_party_programm_desc: "Why should we control everything when there are probably people who can do it better?"
@@ -644,7 +644,7 @@
  CUB_the_new_constitution_desc: "The new Constitution must protect the rights of citizens and the newly established Cuban democracy."
  CUB_guantanamo_que: "End Guantanamo Question"
  CUB_guantanamo_que_desc: "We need to end territorial questions between Cuba and USA, we need to talk about Guantanamo."
- CUB_demilitarize_society: "Demilitarization of Society"
+ CUB_demilitarize_society: "Demilitarisation of Society"
  CUB_demilitarize_society_desc: "Militarism in our country is unfortunately high, we need to demilitarize our society in order to achieve true democracy and freedom."
  CUB_deals_with_rare_communists: "Deal with the Communists"
  CUB_deals_with_rare_communists_desc: "The Communist opposition continues to hinder the development of our country. We have to offer them a deal they can't refuse."
