--- a/localisation/french/MD_focus_CUB_l_french.yml
+++ b/localisation/french/MD_focus_CUB_l_french.yml
@@ -374,8 +374,8 @@
  CUB_buisness_desc: "After so many years of recession, our economy needs stimulation. New businesses would give us the push we need to get us out of this economic hole."
  CUB_reduce_burecracy_apparat: "Reforms of the Bureaucratic Apparatus "
  CUB_reduce_burecracy_apparat_desc: "A certificate for this one, a certificate for that one, a statement there, ugh, gross. It's time to start regulating this."
- CUB_demilitarize_minister: "Demilitarization"
- CUB_demilitarize_minister_desc: "An army is good, but peace is better."
+ CUB_demilitarize_minister: "Démilitarisation"
+ CUB_demilitarize_minister_desc: "Une armée c'est bien, mais la paix c'est mieux."
  CUB_guarantee_multi_party_programm: "Guarantee Multi Party System"
  CUB_guarantee_multi_party_programm_desc: "Why should we control everything when there are probably people who can do it better?"
  CUB_lets_unite: "Let`s Unite"
@@ -611,8 +611,8 @@
  CUB_the_new_constitution_desc: "The new Constitution must protect the rights of citizens and the newly established Cuban democracy."
  CUB_guantanamo_que: "End Guantanamo Question"
  CUB_guantanamo_que_desc: "We need to end territorial questions between Cuba and USA, we need to talk about Guantanamo."
- CUB_demilitarize_society: "Demilitarization of Society"
- CUB_demilitarize_society_desc: "Militarism in our country is unfortunately high, we need to demilitarize our society in order to achieve true democracy and freedom."
+ CUB_demilitarize_society: "Démilitarisation de la société"
+ CUB_demilitarize_society_desc: "Le militarisme dans notre pays est malheureusement élevé, nous devons démilitariser notre société afin de parvenir à une véritable démocratie et à la liberté."
  CUB_deals_with_rare_communists: "Deal with the Communists"
  CUB_deals_with_rare_communists_desc: "The Communist opposition continues to hinder the development of our country. We have to offer them a deal they can't refuse."
  CUB_stable_society: "Stable Society"
