--- a/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
+++ b/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
@@ -1728,7 +1728,7 @@
  kos_recall_refugees: "Przypomnijmy sobie uchodźców"
  kos_recall_refugees_desc: "Wielu naszych ludzi to obecnie uchodźcy w innych stanach. Przypomnienie o nich będzie korzystne dla wzrostu naszej populacji"
  KOS_security_troubles: "Problemy z bezpieczeństwem"
- KOS_security_troubles_desc: "Po demilitaryzacji KLA nasze siły bezpieczeństwa popadły w ruinę. Będziemy musieli rozpocząć wprowadzanie pewnych reform, aby uczynić nasz naród bezpieczniejszym"
+ KOS_security_troubles_desc: "Po demilitaryzacji KLA nasze siły bezpieczeństwa są w rozsypce. Będziemy musieli zacząć wprowadzać pewne reformy, aby nasz kraj był bezpieczniejszy"
  KOS_return_of_kla: "Zmartwychwstanie KLA"
  KOS_return_of_kla_desc: "KLA zostały rozwiązane przez siły NATO. To było złe posunięcie. Będziemy musieli je sprowadzić z powrotem i ożywić, aby poprawić bezpieczeństwo naszych narodów"
  KOS_reverse_engineer_leftovers: "Inżynieria odwrotna"
