--- a/localisation/spanish/MD_focus_CES_l_spanish.yml
+++ b/localisation/spanish/MD_focus_CES_l_spanish.yml
@@ -489,8 +489,8 @@
  CES_trade_with_france_desc: "Francia es un país rico en arte, cultura y una economía dinámica, lo que lo convierte en un socio atractivo para desarrollar nuestras relaciones comerciales."
  CES_trade_with_usa: "Comercio con EE.UU."
  CES_trade_with_usa_desc: "Estados Unidos es un país con gran influencia económica, una innovación destacada y enormes perspectivas de cooperación, lo que lo convierte en un socio clave para el desarrollo de relaciones comerciales internacionales."
- CES_trade_with_spain: "Trade with Spain"
- CES_trade_with_spain_desc: "Spain is a large market with high potential for business growth. Cooperation with Spanish companies and entrepreneurs opens up new opportunities to expand our operations and increase sales."
+ CES_trade_with_spain: "Comercio con España"
+ CES_trade_with_spain_desc: "España es un gran mercado con un elevado potencial de crecimiento empresarial. La cooperación con empresas y empresarios españoles abre nuevas oportunidades para ampliar nuestras operaciones y aumentar las ventas."
  TRK_berli_modifier: "Revived Politburo"
  TRK_berli_tt_intro: "Modify §Y$TRK_berli_modifier$§! by"
  TRK_berli_start_tt: "Add §Y$TRK_berli_modifier$§!, which grants £political_power_texticon  Political Power Gain: §G+1.00%§! \nIdeology drift defense: §G+10.0%§! \n\n"
@@ -958,18 +958,18 @@
  CES_entering_CSTO: "CSTO guarantees"
  CES_entering_CSTO_desc: "The CSTO provides guarantees of military support and solidarity in the event of a threat, emphasizing the importance of regional stability."
  CES_china_ties_un: "Connections with China"
- CES_china_ties_un_desc: "China represents one of the largest economies in the world. Cooperation with it gives us access to a huge market and investment, which contributes to the development of our economy."
- CES_chinese_agreement: "Agreement with China"
- CES_chinese_agreement_desc: "The trade agreement with China helps reduce tariff and non-tariff barriers, which facilitates mutual trade and encourages investment."
- CES_ask_china_protect: "Ask China to protect us"
- CES_ask_china_protect_desc: "China has now much lot of in common with us. They should establish our protection."
+ CES_china_ties_un_desc: "China representa una de las mayores economías del mundo. La cooperación con ella nos da acceso a un mercado enorme y a inversiones que contribuyen al desarrollo de nuestra economía."
+ CES_chinese_agreement: "Acuerdo con China"
+ CES_chinese_agreement_desc: "El acuerdo comercial con China contribuye a reducir las barreras arancelarias y no arancelarias, lo que facilita el comercio mutuo y fomenta la inversión."
+ CES_ask_china_protect: "Pedir a China que nos proteja"
+ CES_ask_china_protect_desc: "China tiene ahora mucho en común con nosotros. Deberían establecer nuestra protección."
  CES_eu_kazuz: "Partnership with EU"
- CES_eu_kazuz_desc: "Although EU is relatively far from us, their model is very appealing and we should follow it."
- CES_korean_pact_trade: "Trade Agreement with Korea"
- CES_korean_pact_trade_desc: "South Korea is one of the most prosperous democratic countries in the east. We should increase trade with them."
+ CES_eu_kazuz_desc: "Aunque la UE está relativamente lejos de nosotros, su modelo es muy atractivo y deberíamos seguirlo."
+ CES_korean_pact_trade: "Acuerdo comercial con Corea"
+ CES_korean_pact_trade_desc: "Corea del Sur es uno de los países democráticos más prósperos de Oriente. Deberíamos aumentar el comercio con ellos."
  CES_entering_nato: "US Guarantees"
- CES_entering_nato_desc: "Although NATO is not encompassing our region, we might ask the west to bring us in."
- jihad.1.t: "Mutual military cooperation"
+ CES_entering_nato_desc: "Aunque la OTAN no abarque nuestra región, podríamos pedir a Occidente que nos incluya."
+ jihad.1.t: "Cooperación militar mutua"
  jihad.1.d: "Diplomats from central Asia offer us military cooperation to achieve common goals in the name of the Islamic revolution. Such cooperation will allow us to strengthen our position on the world stage."
  jihad.1.a: "Such cooperation is the key to success"
  jihad.1.b: "We can protect ourselves. The Taliban don't need help."
@@ -1027,7 +1027,7 @@
  CES_chinese_model_desc: "China's experience in the development of its country will be very useful to us"
  CES_support_afghan_guys: "Support The Afghan Brothers"
  CES_support_afghan_guys_desc: "The Afghan people will be free!"
- CES_communist_education: "Free Education"
+ CES_communist_education: "Educación gratuita"
  CES_communist_education_desc: "Every citizen of our country has the right to free education"
  CES_anti_religion: "Atheistic Propaganda"
  CES_anti_religion_desc: "We will fight religion as a tool poisoning our society"
@@ -1037,7 +1037,7 @@
  CES_ca_union_sov_desc: "Hail the communist people of Central Asia!"
  CES_state_business_ventures: "State Business Ventures"
  CES_state_business_ventures_desc: "Our state needs to have it's own abilities to generate revenue."
- CES_western_opposition_idea: "Democratic Opposition"
+ CES_western_opposition_idea: "Oposición democrática"
  CES_western_opposition_idea_desc: "Democratic opposition is constantly growing in the country and preparing for a color revolution."
  CES_political_instability_idea: "Unstable Politics"
  CES_political_instability_idea_desc: "Pur politics are unstable and protests are waged from time to time."
