--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -1820,7 +1820,7 @@
  kos_recall_refugees: "Recall Refugees"
  kos_recall_refugees_desc: "A lot of our people are currently refugees in other states. Recalling them will be beneficial for our population growth"
  KOS_security_troubles: "Security Troubles"
- KOS_security_troubles_desc: "Following the demilitarization of the KLA, our security forces have been in shambles. We will need to start putting in some reforms to make our nation more secure"
+ KOS_security_troubles_desc: "Following the demilitarisation of the KLA, our security forces have been in shambles. We will need to start putting in some reforms to make our nation more secure"
  KOS_return_of_kla: "Resurrection of the KLA"
  KOS_return_of_kla_desc: "The KLA were disbanded by NATO forces. It was a bad move. We will need to bring them back, and revitalize them to better our nations security"
  KOS_reverse_engineer_leftovers: "Reverse Engineering"
