--- a/localisation/french/MD_focus_SER_VOJ_MNT_l_french.yml
+++ b/localisation/french/MD_focus_SER_VOJ_MNT_l_french.yml
@@ -1719,8 +1719,8 @@
  kos_foreign_workers_desc: "Due to our small population, we will have to encourage migrants from other nations to come to our nation and take some jobs"
  kos_recall_refugees: "Recall Refugees"
  kos_recall_refugees_desc: "A lot of our people are currently refugees in other states. Recalling them will be beneficial for our population growth"
- KOS_security_troubles: "Security Troubles"
- KOS_security_troubles_desc: "Following the demilitarization of the KLA, our security forces have been in shambles. We will need to start putting in some reforms to make our nation more secure"
+ KOS_security_troubles: "Problèmes de sécurité"
+ KOS_security_troubles_desc: "Depuis la démilitarisation de l’UCK, nos forces de sécurité sont en ruine. Nous devons commencer à mettre en place des réformes pour rendre notre pays plus sûr."
  KOS_return_of_kla: "Resurrection of the KLA"
  KOS_return_of_kla_desc: "The KLA were disbanded by NATO forces. It was a bad move. We will need to bring them back, and revitalize them to better our nations security"
  KOS_reverse_engineer_leftovers: "Reverse Engineering"
