--- a/localisation/spanish/MD_focus_CUB_l_spanish.yml
+++ b/localisation/spanish/MD_focus_CUB_l_spanish.yml
@@ -359,14 +359,14 @@
  CUB_democratic_start_desc: "Por fin, después de años de inestabilidad, Cuba está en el camino de la verdad."
  CUB_wind_of_changes: "Viento de cambio"
  CUB_wind_of_changes_desc: "Es tiempo de cambio, los vientos de cambio han llegado a nuestra isla."
- CUB_eliminate_nationalists: "Destroy the Nationalists"
- CUB_eliminate_nationalists_desc: "Nationalists are a threat to Cuba, they are brutal murderers and thieves who should not be allowed in power under any circumstances."
- CUB_release_political_prisoners: "Release Political Prisoners"
- CUB_release_political_prisoners_desc: "The release of political prisoners is a necessary measure to strengthen our position in domestic politics."
- CUB_decommunisation_society: "Decommunization"
- CUB_decommunisation_society_desc: "Communism is a utopia that is lodged in the minds of our citizens. It is necessary to destroy everything connected with this fairy tale."
- CUB_support_of_western_communists: "Support for Pro-Western Communists"
- CUB_support_of_western_communists_desc: "Despite our attitude towards the Communists and the change of power, they still have influence in society. However, there are a number of Communists who are sympathetic to our regime, so it is high time to invite them to our coalition."
+ CUB_eliminate_nationalists: "Destruir a los nacionalistas"
+ CUB_eliminate_nationalists_desc: "Los nacionalistas son una amenaza para Cuba, son asesinos brutales y ladrones a quienes no se les debe permitir estar en el poder bajo ninguna circunstancia."
+ CUB_release_political_prisoners: "Liberación de presos políticos"
+ CUB_release_political_prisoners_desc: "La liberación de los presos políticos es una medida necesaria para fortalecer nuestra posición en la política interna."
+ CUB_decommunisation_society: "Descomunización"
+ CUB_decommunisation_society_desc: "El comunismo es una utopía que está instalada en la mente de nuestros ciudadanos. Es necesario destruir todo lo que esté relacionado con este cuento de hadas."
+ CUB_support_of_western_communists: "Apoyo a los comunistas pro-occidentales"
+ CUB_support_of_western_communists_desc: "A pesar de nuestra actitud hacia los comunistas y el cambio de poder, estos siguen teniendo influencia en la sociedad. Sin embargo, hay un número de comunistas que simpatizan con nuestro régimen, por lo que ya es hora de invitarlos a nuestra coalición."
  CUB_republic_alive: "Renacimiento de la República"
  CUB_republic_alive_desc: "La República de Cuba es un ave fénix, ha resurgido y está nuevamente en el camino de la verdad."
  CUB_new_constutition_reforms: "Reformas constitucionales"
@@ -375,10 +375,10 @@
  CUB_ally_church_desc: "La iglesia es una de las instituciones más importantes en cada nación, necesitamos hacernos amigos de la iglesia para mantener el control sobre nuestra población."
  CUB_buisness: "Incentivos para hacer negocios"
  CUB_buisness_desc: "Después de tantos años de recesión, nuestra economía necesita estímulos. Las nuevas empresas nos darían el empujón que necesitamos para salir de este agujero económico."
- CUB_reduce_burecracy_apparat: "Reforms of the Bureaucratic Apparatus "
- CUB_reduce_burecracy_apparat_desc: "A certificate for this one, a certificate for that one, a statement there, ugh, gross. It's time to start regulating this."
- CUB_demilitarize_minister: "Demilitarization"
- CUB_demilitarize_minister_desc: "An army is good, but peace is better."
+ CUB_reduce_burecracy_apparat: "Reformas del aparato burocrático"
+ CUB_reduce_burecracy_apparat_desc: "Un certificado para esto, un certificado para aquello, una declaración, uf, qué asco. Es hora de empezar a regular esto."
+ CUB_demilitarize_minister: "Desmilitarización"
+ CUB_demilitarize_minister_desc: "Un ejército es bueno, pero la paz es mejor."
  CUB_guarantee_multi_party_programm: "Guarantee Multi Party System"
  CUB_guarantee_multi_party_programm_desc: "Why should we control everything when there are probably people who can do it better?"
  CUB_lets_unite: "Let`s Unite"
@@ -431,7 +431,7 @@
  CUB_nationalists_desc: "Finally, after all these years, we can build a great and strong Cuba!"
  CUB_mass_propoganda: "Mass Nationalist Propaganda"
  CUB_mass_propoganda_desc: "In order to attract people to our side, we have to propagandise, and we have to actively promote nationalist ideology."
- CUB_decommunisation: "Decommunization"
+ CUB_decommunisation: "Descomunización"
  CUB_decommunisation_desc: "The communists destroyed the quiet, peaceful lives of Cubans. Everything associated with this communist contagion must be destroyed and erased from the memory of Cubans."
  CUB_crush_castro: "Destroy Castro's Cult of Personality"
  CUB_crush_castro_desc: "Castro is a criminal who brought pain and destruction to our Cuban land, ruining its peaceful life."
@@ -614,8 +614,8 @@
  CUB_the_new_constitution_desc: "The new Constitution must protect the rights of citizens and the newly established Cuban democracy."
  CUB_guantanamo_que: "End Guantanamo Question"
  CUB_guantanamo_que_desc: "We need to end territorial questions between Cuba and USA, we need to talk about Guantanamo."
- CUB_demilitarize_society: "Demilitarization of Society"
- CUB_demilitarize_society_desc: "Militarism in our country is unfortunately high, we need to demilitarize our society in order to achieve true democracy and freedom."
+ CUB_demilitarize_society: "Desmilitarización de la sociedad"
+ CUB_demilitarize_society_desc: "El militarismo en nuestro país es lamentablemente alto, necesitamos desmilitarizar nuestra sociedad para lograr una verdadera democracia y libertad."
  CUB_deals_with_rare_communists: "Deal with the Communists"
  CUB_deals_with_rare_communists_desc: "The Communist opposition continues to hinder the development of our country. We have to offer them a deal they can't refuse."
  CUB_stable_society: "Stable Society"
