--- a/localisation/english/MD_focus_BOS_l_english.yml
+++ b/localisation/english/MD_focus_BOS_l_english.yml
@@ -827,7 +827,6 @@ os_is_pro_serb_tt: ""
 os_is_pro_croatian_tt: ""
 osnia.15.b: ""
 os_is_pro_western_tt: ""
-os_is_pro_croatian_tt: ""
 osnia.15.a: ""
 osnia.15.d: ""
 osnia.15.t: ""
@@ -838,37 +837,28 @@ bos_is_pro_croatian_tt: ""
 osnia.16.a: ""
 osnia.16.d: ""
 osnia.16.t: ""
-bos_is_pro_russian_tt: ""
 Bosnia.17.b: ""
 bos_is_pro_serb_tt: ""
 Bosnia.17.a: ""
 Bosnia.17.d: ""
 Bosnia.17.t: ""
-bos_is_pro_serb_tt: ""
-bos_is_pro_croatian_tt: ""
 Bosnia.18.b: ""
-bos_is_pro_western_tt: ""
-bos_is_pro_croatian_tt: ""
 Bosnia.18.a: ""
 Bosnia.18.d: ""
 Bosnia.18.t: ""
-bos_is_pro_russian_tt: ""
 Bosnia.19.b: ""
-bos_is_pro_western_tt: ""
 Bosnia.19.a: ""
 Bosnia.19.d: ""
 Bosnia.19.t: ""
-bos_is_pro_western_tt: ""
 Bosnia.20.b: ""
-bos_is_pro_russian_tt: ""
 Bosnia.20.a: ""
 Bosnia.20.d: ""
-Bosnia.20.t: ""
+Bosnia.20.c: ""
 Bosnia.21.a: ""
 Bosnia.21.d: ""
 Bosnia.21.t: ""
 Bosnia.31.a: ""
-Bosnia.31.a: ""
+Bosnia.31.b: ""
 Bosnia.31.d: ""
 Bosnia.31.t: ""
 Bosnia.32.a: ""
@@ -877,9 +867,6 @@ Bosnia.32.t: ""
 Bosnia.33.a: ""
 Bosnia.33.d: ""
 Bosnia.33.t: ""
-Bosnia.33.a: ""
-Bosnia.33.a: ""
-Bosnia.37.a: ""
 Bosnia.37.a: ""
 Bosnia.37.d: ""
 Bosnia.37.t: ""
@@ -928,12 +915,8 @@ Bosnia.47.t: ""
 Bosnia.48.a: ""
 Bosnia.48.d: ""
 Bosnia.48.t: ""
-Bosnia.20.a: ""
-Bosnia.20.d: ""
-BOS_strategy_plans: ""
 Ratko_Mladic: "Ratko Mladic"
 bos_Bosnibos_croat_attitude_towards_us_will_rise_ttak_attitude_towards_us_will_rise_tt: ""
-Bosnia.20.t: ""
 
 
 #news events
