--- a/localisation/english/MD_investments_l_english.yml
+++ b/localisation/english/MD_investments_l_english.yml
@@ -304,46 +304,46 @@
 
  encourage_productivity_in_state: "Currently Encouraging Productivity in §Y[THIS.GetName]§!."
  encourage_productivity_in_state_tt: "§YEncourage Productivity Growth§! in §Y[THIS.GetName]§!\n---------\nWe can encourage productivity growth in §Y[THIS.GetName]§! by bringing new technologies, techniques and more to the region helping it grow."
- encourage_productivity_in_state_delayed_tt: "§YPrerequisites§!:\n[!encourage_productivity_in_state_click_enabled]\n§YEffects:§!\n[!encourage_productivity_in_state_click]\n"
+ encourage_productivity_in_state_delayed_tt: "§YPrerequisites:§!\n[!encourage_productivity_in_state_click_enabled]\n§YEffects:§!\n[!encourage_productivity_in_state_click]\n"
  encourage_productivity_in_state_click_tt: "For 120 Days §YProductivity Growth§! in §Y[THIS.GetName]§! will be §Y20%§! faster."
 
  expand_local_building_capacity: "Currently §YExpanding Local Building Capacity§! in §Y[THIS.GetName]§!."
  block_future_expand_local_building_capacity: "We can §YExpand Local Building Capacity§! in §Y[THIS.GetName]§! (Times Building Capacity Expanded: [?expanded_building_slot_times|0Y])"
  expand_local_building_capacity_tt: "§YExpand Local Building Capacity§! in §Y[THIS.GetName]§!\n---------\nWe can expand the local building capacity by enacting a variety of local building policies, clearing additional land, and expanding the available resoucres to local builders."
- expand_local_building_capacity_delayed_tt: "§YPrerequisites§!:\n[!expand_local_building_capacity_click_enabled]\n§YEffects:§!\n[!expand_local_building_capacity_click]\n"
- expand_local_building_capacity_click_tt: "Every 120 Days we can gain §GOne§! §YBuilding Slot§! in §Y[THIS.GetName]§!. We can expand the §YBuilding Slots§! in a given state up to §Y5§!."
+ expand_local_building_capacity_delayed_tt: "§YPrerequisites:§!\n[!expand_local_building_capacity_click_enabled]\n§YEffects:§!\n[!expand_local_building_capacity_click]\n"
+ expand_local_building_capacity_click_tt: "Every 120 Days we can gain §G1§! §YBuilding Slot§! in §Y[THIS.GetName]§!. We can expand the §YBuilding Slots§! in a given state up to §Y5§!."
 
  expand_local_renewable_capacity: "Currently §YExpanding Local Renewable Capcity§! in §Y[THIS.GetName]§!."
  expand_local_renewable_capacity_tt: "§YExpand Local Renewable Capacity§! in §Y[THIS.GetName]§!\n---------\nWe should encourage the §YRenewable Energy Infrastructure§! in §Y[THIS.GetName]§! yielding additional energy from the local renewable energy grid."
- expand_local_renewable_capacity_delayed_tt: "§YPrerequisites§!:\n[!expand_local_renewable_capacity_click_enabled]\n§YEffects:§!\n[!expand_local_renewable_capacity_click]\n"
+ expand_local_renewable_capacity_delayed_tt: "§YPrerequisites:§!\n[!expand_local_renewable_capacity_click_enabled]\n§YEffects:§!\n[!expand_local_renewable_capacity_click]\n"
  expand_local_renewable_capacity_click_tt: "For 120 Days we gain the following in §Y[THIS.GetName]§!:\n"
 
  expand_local_infrastructure: "Currently §YExpanding Local Infrastructure§! in §Y[THIS.GetName]§!."
  expand_local_infrastructure_tt: "§YExpand Local Infrastructure§! in §Y[THIS.GetName]§!\n---------\nThe infrastructure in §Y[THIS.GetName]§! leaves something to be desired. We should devise some targeted short-term projects to expand the infrastructure in the state to help emphasize and expand the local development of the state."
- expand_local_infrastructure_delayed_tt: "§YPrerequisites§!:\n[!expand_local_infrastructure_click_enabled]\n§YEffects:§!\n[!expand_local_infrastructure_click]\n"
+ expand_local_infrastructure_delayed_tt: "§YPrerequisites:§!\n[!expand_local_infrastructure_click_enabled]\n§YEffects:§!\n[!expand_local_infrastructure_click]\n"
  expand_local_infrastructure_click_tt: "For 120 Days we gain the following in §Y[THIS.GetName]§!:\n"
 
  expand_local_military_infrastructure: "Currently §YExpanding Local Military Infrastructure§! in §Y[THIS.GetName]§!."
  expand_local_military_infrastructure_tt: "§YExpand Local Military Infrastructure§! in §Y[THIS.GetName]§!\n---------\nThe military has approached the government and identified pottential building sites in §Y[THIS.GetName]§!. They have suggested expanding local military infrastructure here to ensure the military in the region is adequately supported in case of conflict in the area."
- expand_local_military_infrastructure_delayed_tt: "§YPrerequisites§!:\n[!expand_local_military_infrastructure_click_enabled]\n§YEffects:§!\n[!expand_local_military_infrastructure_click]\n"
+ expand_local_military_infrastructure_delayed_tt: "§YPrerequisites:§!\n[!expand_local_military_infrastructure_click_enabled]\n§YEffects:§!\n[!expand_local_military_infrastructure_click]\n"
  expand_local_military_infrastructure_click_tt: "For 120 Days we gain the following in §Y[THIS.GetName]§!:\n"
 
  expand_local_energy_infrastructure: "Currently §YExpand Local Energy Infrastructure§! in §Y[THIS.GetName]§!."
  expand_local_energy_infrastructure_tt: "§YExpand Local Energy Infrastructure§! in §Y[THIS.GetName]§!\n---------\nLocal energy in §Y[THIS.GetName]§! can be expanded to better support the populace of the local region as well as better enhancing the national grid."
- expand_local_energy_infrastructure_delayed_tt: "§YPrerequisites§!:\n[!expand_local_energy_infrastructure_click_enabled]\n§YEffects:§!\n[!expand_local_energy_infrastructure_click]\n"
+ expand_local_energy_infrastructure_delayed_tt: "§YPrerequisites:§!\n[!expand_local_energy_infrastructure_click_enabled]\n§YEffects:§!\n[!expand_local_energy_infrastructure_click]\n"
  expand_local_energy_infrastructure_click_tt: "For 120 Days we gain the following in §Y[THIS.GetName]§!:\n"
 
  build_forward_logistics_base: "Currently §YBuild Forward Logistics Base§! in §Y[THIS.GetName]§!."
  build_forward_logistics_base_tt: "§YBuild Forward Logistics Base§! in §Y[THIS.GetName]§!\n---------\nThe state is currently a bit detached from our primrary logistics. We should look into building forward logistics bases to help support the troops deployed in §Y[THIS.GetName]§!."
- build_forward_logistics_base_delayed_tt: "§YPrerequisites§!:\n[!build_forward_logistics_base_click_enabled]\n§YEffects:§!\n[!build_forward_logistics_base_click]\n"
+ build_forward_logistics_base_delayed_tt: "§YPrerequisites:§!\n[!build_forward_logistics_base_click_enabled]\n§YEffects:§!\n[!build_forward_logistics_base_click]\n"
  build_forward_logistics_base_click_tt: "For 120 Days we gain the following in §Y[THIS.GetName]§!:\n"
 
  improve_rebuilding_efforts: "Currently §YImprove Rebuilding Efforts§! in §Y[THIS.GetName]§!."
  improve_rebuilding_efforts_tt: "§YImprove Rebuilding Efforts§! in §Y[THIS.GetName]§!\n---------\nNow that §Y[THIS.GetName]§! is fully in our control we should look at emphasizing the rebuilding efforts in the region to ensure the populace is able to continue unimpeded."
- improve_rebuilding_efforts_delayed_tt: "§YPrerequisites§!:\n[!improve_rebuilding_efforts_click_enabled]\n§YEffects:§!\n[!improve_rebuilding_efforts_click]\n"
+ improve_rebuilding_efforts_delayed_tt: "§YPrerequisites:§!\n[!improve_rebuilding_efforts_click_enabled]\n§YEffects:§!\n[!improve_rebuilding_efforts_click]\n"
  improve_rebuilding_efforts_click_tt: "For 120 Days we gain the following in §Y[THIS.GetName]§!:\n"
 
- hire_extra_primary_sector_workers: "Currently §YImprove Rebuilding Efforts§! in §Y[THIS.GetName]§!."
+ hire_extra_primary_sector_workers: "Currently §YHire Extra Primary Sector Workers§! in §Y[THIS.GetName]§!."
  hire_extra_primary_sector_workers_tt: "§YHire Extra Primary Sector Workers§! in §Y[THIS.GetName]§!\n---------\nThe resoucre production in §Y[THIS.GetName]§! is not meeting the country's expectation for output. We should look into hiring additional primary sector workers to help the production of the reources."
- hire_extra_primary_sector_workers_delayed_tt: "§YPrerequisites§!:\n[!hire_extra_primary_sector_workers_click_enabled]\n§YEffects:§!\n[!hire_extra_primary_sector_workers_click]\n"
+ hire_extra_primary_sector_workers_delayed_tt: "§YPrerequisites:§!\n[!hire_extra_primary_sector_workers_click_enabled]\n§YEffects:§!\n[!hire_extra_primary_sector_workers_click]\n"
  hire_extra_primary_sector_workers_click_tt: "For 120 Days we gain the following in §Y[THIS.GetName]§!:\n"
