--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -2043,7 +2043,7 @@
  kosovo_un.1.c: "Social Support"
  ser_kos.1.t: "Kosovo Referendum"
  ser_kos.1.d: "Referendum on independence was held in Kosovo, in which the majority decided to separate from our country, will we leave everything as it is or eliminate them by force?"
- ser_kos.1.a: "Referendum IsIllegal!"
+ ser_kos.1.a: "The Referendum Is Illegal!"
  ser_kos.1.b: "Let Them Go"
  ##########Ideas##########
  KOS_idea_rights: "Human Rights and Freedoms"
