--- a/localisation/english/MD_investments_l_english.yml
+++ b/localisation/english/MD_investments_l_english.yml
@@ -309,7 +309,7 @@
 
  expand_local_building_capacity: "Currently §YExpanding Local Building Capacity§! in §Y[THIS.GetName]§!."
  block_future_expand_local_building_capacity: "We can §YExpand Local Building Capacity§! in §Y[THIS.GetName]§! (Times Building Capacity Expanded: [?expanded_building_slot_times|0Y])"
- expand_local_building_capacity_tt: "§YExpand Local Building Capacity§! in §Y[THIS.GetName]§!\n---------\nWe can expand the local building capacity by enacting a variety of local building policies, clearing additional land, and expanding the available resoucres to local builders."
+ expand_local_building_capacity_tt: "§YExpand Local Building Capacity§! in §Y[THIS.GetName]§!\n---------\nWe can expand the local building capacity by enacting a variety of local building policies, clearing additional land, and expanding the available resources to local builders."
  expand_local_building_capacity_delayed_tt: "§YPrerequisites:§!\n[!expand_local_building_capacity_click_enabled]\n§YEffects:§!\n[!expand_local_building_capacity_click]\n"
  expand_local_building_capacity_click_tt: "Every 120 Days we can gain §G1§! §YBuilding Slot§! in §Y[THIS.GetName]§!. We can expand the §YBuilding Slots§! in a given state up to §Y5§!."
 
