--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -864,7 +864,7 @@
  SER_involve_un_desc: "This union with Montenegro is at the edge of collapse. To make it smooth and quick we will ask UN and International community to involve and help us in creating Souvereign Montenegro."
  SER_begin_the_recognition_process: "Begin the Recognition Process"
  SER_begin_the_recognition_process_desc: "We must start international campaign for recognition of union's dissolve and creations of Serbian and Montenegro States"
- SER_remove_previous_kleptocrats: "Remove Previou Kleptocrats"
+ SER_remove_previous_kleptocrats: "Remove Previous Kleptocrats"
  SER_remove_previous_kleptocrats_desc: "We will remove those kleptocrats of past regime who are bringing more pain to Serbia"
  SER_free_at_last: "Free at Last"
  SER_free_at_last_desc: "We have managed to dissolve thin unholy union smooth and quick. It's new chapter of serbian history, long live new Serbian Republic!"
